// Command to generate the Go code:
// protoc --go_out=. --go-grpc_out=. proto/course_category.proto

syntax = "proto3";

package pb;

option go_package = "internal/pb";

message Blank {}

message Category {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CategoryOutput {
    repeated Category category = 1;
}

message GetCategoriesOutput {
    repeated Category categories = 1;
}

message CreateCategoryInput {
    string name = 1;
    string description = 2;
}

message GetCategoryInput {
    string id = 1;
}

service CategoryService {

    rpc CreateCategory (CreateCategoryInput) returns (Category) {}

    rpc GetCategories (Blank) returns (GetCategoriesOutput) {}

    rpc GetCategory (GetCategoryInput) returns (Category) {}

};

